# ray-tracing

./: README.md  results.tar
baseline/rti/: CMakeLists.txt  gpuRTIStruct.h
baseline/rti/test/: kernel.cu
cow_results/: trianglemesh_10_6800314.out  trianglemesh_10_6800326.out  trianglemesh_10_6800338.out  trianglemesh_12_6800315.out  trianglemesh_12_6800327.out  trianglemesh_12_6800339.out  trianglemesh_16_6800316.out  trianglemesh_16_6800328.out  trianglemesh_16_6800340.out  trianglemesh_1_6800317.out  trianglemesh_1_6800329.out  trianglemesh_1_6800341.out  trianglemesh_20_6800318.out  trianglemesh_20_6800330.out  trianglemesh_20_6800342.out  trianglemesh_24_6800319.out  trianglemesh_24_6800331.out  trianglemesh_24_6800343.out  trianglemesh_28_6800320.out  trianglemesh_28_6800332.out  trianglemesh_28_6800344.out  trianglemesh_2_6800321.out  trianglemesh_2_6800333.out  trianglemesh_2_6800345.out  trianglemesh_3_6800322.out  trianglemesh_3_6800334.out  trianglemesh_3_6800346.out  trianglemesh_4_6800323.out  trianglemesh_4_6800335.out  trianglemesh_4_6800347.out  trianglemesh_6_6800324.out  trianglemesh_6_6800336.out  trianglemesh_6_6800348.out  trianglemesh_8_6800325.out  trianglemesh_8_6800337.out  trianglemesh_8_6800349.out
dragon_results/: bvh_10_6768251.out  bvh_10_6768443.out  bvh_10_6784493.out  bvh_10_6784517.out  bvh_10_6784541.out  bvh_12_6768252.out  bvh_12_6768444.out  bvh_12_6784494.out  bvh_12_6784518.out  bvh_12_6784542.out  bvh_16_6768253.out  bvh_16_6768445.out  bvh_16_6784495.out  bvh_16_6784519.out  bvh_16_6784543.out  bvh_1_6768254.out  bvh_1_6768446.out  bvh_1_6784496.out  bvh_1_6784520.out  bvh_1_6784544.out  bvh_20_6768255.out  bvh_20_6768447.out  bvh_20_6784497.out  bvh_20_6784521.out  bvh_20_6784545.out  bvh_24_6768256.out  bvh_24_6768448.out  bvh_24_6784498.out  bvh_24_6784522.out  bvh_24_6784546.out  (+82 more)
(+107 files in other folders)
